<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BraintreeDemoCardTokenizationViewController">
            <connections>
                <outlet property="autofillInvalidCardButton" destination="oTK-wu-vw5" id="ZGf-ow-BbH"/>
                <outlet property="autofillValidCardButton" destination="1Pj-aP-wZO" id="i7j-Oc-s6a"/>
                <outlet property="cardNumberField" destination="wSt-zV-Evu" id="EaU-n1-J0Q"/>
                <outlet property="expirationMonthField" destination="QVM-Wc-mWj" id="QvQ-FL-zhD"/>
                <outlet property="expirationYearField" destination="gts-tt-uxz" id="LJJ-Xl-DUk"/>
                <outlet property="submitButton" destination="bQQ-5U-f5u" id="EhN-Er-32O"/>
                <outlet property="validateCardSwitch" destination="VfT-zR-fyB" id="8C1-v2-xqN"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <subviews>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="4111111111111111" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wSt-zV-Evu">
                    <rect key="frame" x="90" y="30.5" width="304" height="34"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="12" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QVM-Wc-mWj">
                    <rect key="frame" x="90" y="72.5" width="304" height="34"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="2038" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gts-tt-uxz">
                    <rect key="frame" x="90" y="114.5" width="304" height="34"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CC #" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="86H-Wi-M74">
                    <rect key="frame" x="20" y="40" width="35" height="18"/>
                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exp. Mth" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0qf-Fu-hA5">
                    <rect key="frame" x="20" y="75" width="60" height="25"/>
                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exp. Year" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QYT-iV-GwL">
                    <rect key="frame" x="20" y="117" width="64" height="25"/>
                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bQQ-5U-f5u">
                    <rect key="frame" x="182.5" y="382" width="49" height="30"/>
                    <state key="normal" title="Submit">
                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="submitForm" destination="-1" eventType="touchUpInside" id="Wf5-mr-Rnf"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Pj-aP-wZO">
                    <rect key="frame" x="146" y="250" width="122" height="30"/>
                    <state key="normal" title="Autofill Valid Card">
                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="autofillValidCard" destination="-1" eventType="touchUpInside" id="QFw-tc-COH"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oTK-wu-vw5">
                    <rect key="frame" x="141" y="292" width="132" height="30"/>
                    <state key="normal" title="Autofill Invalid Card">
                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="autofillInvalidCard" destination="-1" eventType="touchUpInside" id="pTo-45-9iP"/>
                    </connections>
                </button>
                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" title="Validate Card" translatesAutoresizingMaskIntoConstraints="NO" id="VfT-zR-fyB">
                    <rect key="frame" x="345" y="165.5" width="51" height="31"/>
                </switch>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Validate card" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wly-Ad-HkB">
                    <rect key="frame" x="235" y="172" width="90" height="18"/>
                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="VfT-zR-fyB" firstAttribute="centerY" secondItem="Wly-Ad-HkB" secondAttribute="centerY" id="1UT-ba-dsl"/>
                <constraint firstItem="VfT-zR-fyB" firstAttribute="trailing" secondItem="gts-tt-uxz" secondAttribute="trailing" id="2Tm-Bf-F2h"/>
                <constraint firstItem="wSt-zV-Evu" firstAttribute="baseline" secondItem="86H-Wi-M74" secondAttribute="baseline" constant="-2" id="3wg-Qz-Icm"/>
                <constraint firstItem="0qf-Fu-hA5" firstAttribute="top" secondItem="86H-Wi-M74" secondAttribute="bottom" constant="17" id="AU6-wm-uTE"/>
                <constraint firstItem="gts-tt-uxz" firstAttribute="leading" secondItem="QVM-Wc-mWj" secondAttribute="leading" id="Bje-1c-RGq"/>
                <constraint firstItem="0qf-Fu-hA5" firstAttribute="leading" secondItem="86H-Wi-M74" secondAttribute="leading" id="Dcf-HF-aL3"/>
                <constraint firstAttribute="trailing" secondItem="wSt-zV-Evu" secondAttribute="trailing" constant="20" id="DhF-xr-b8B"/>
                <constraint firstItem="bQQ-5U-f5u" firstAttribute="top" secondItem="oTK-wu-vw5" secondAttribute="bottom" constant="60" id="EIN-fT-BBx"/>
                <constraint firstAttribute="trailing" secondItem="QVM-Wc-mWj" secondAttribute="trailing" constant="20" id="EuE-uo-jyH"/>
                <constraint firstItem="86H-Wi-M74" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="FlE-H3-Tkv"/>
                <constraint firstItem="QYT-iV-GwL" firstAttribute="top" secondItem="0qf-Fu-hA5" secondAttribute="bottom" constant="17" id="GVS-dC-cEf"/>
                <constraint firstItem="wSt-zV-Evu" firstAttribute="leading" secondItem="86H-Wi-M74" secondAttribute="trailing" constant="35" id="L5p-Wa-E9R"/>
                <constraint firstItem="1Pj-aP-wZO" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="LN3-QM-78P"/>
                <constraint firstAttribute="trailing" secondItem="gts-tt-uxz" secondAttribute="trailing" constant="20" id="LQS-zd-BLw"/>
                <constraint firstItem="VfT-zR-fyB" firstAttribute="leading" secondItem="Wly-Ad-HkB" secondAttribute="trailing" constant="20" id="W1u-7j-qsh"/>
                <constraint firstItem="1Pj-aP-wZO" firstAttribute="top" secondItem="Wly-Ad-HkB" secondAttribute="bottom" constant="60" id="Wc3-1l-ZAF"/>
                <constraint firstItem="gts-tt-uxz" firstAttribute="top" secondItem="QVM-Wc-mWj" secondAttribute="bottom" constant="8" id="Y4Z-Vk-QpP"/>
                <constraint firstItem="gts-tt-uxz" firstAttribute="baseline" secondItem="QYT-iV-GwL" secondAttribute="baseline" constant="-2" id="ase-OO-p8e"/>
                <constraint firstItem="Wly-Ad-HkB" firstAttribute="top" secondItem="QYT-iV-GwL" secondAttribute="bottom" constant="30" id="gM0-kW-xy8"/>
                <constraint firstItem="0qf-Fu-hA5" firstAttribute="baseline" secondItem="QVM-Wc-mWj" secondAttribute="baseline" constant="2" id="lfz-9a-MyZ"/>
                <constraint firstItem="QVM-Wc-mWj" firstAttribute="top" secondItem="wSt-zV-Evu" secondAttribute="bottom" constant="8" id="oVq-qv-7M2"/>
                <constraint firstItem="bQQ-5U-f5u" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="pbn-5Q-on6"/>
                <constraint firstItem="oTK-wu-vw5" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="qqQ-Zg-w0z"/>
                <constraint firstItem="oTK-wu-vw5" firstAttribute="top" secondItem="1Pj-aP-wZO" secondAttribute="bottom" constant="12" id="s2S-A8-ZDj"/>
                <constraint firstItem="QVM-Wc-mWj" firstAttribute="leading" secondItem="wSt-zV-Evu" secondAttribute="leading" id="vKh-Jb-spw"/>
                <constraint firstItem="86H-Wi-M74" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="x3A-GQ-lUd"/>
                <constraint firstItem="0qf-Fu-hA5" firstAttribute="leading" secondItem="QYT-iV-GwL" secondAttribute="leading" id="xjU-SK-Jsv"/>
            </constraints>
            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
            <point key="canvasLocation" x="-513" y="147"/>
        </view>
    </objects>
</document>
